# C-Projects

./: .gitignore  BigNumber.c  BigProject.cpp  BigProject.sln  BigProject.vcxproj  BigProject.vcxproj.filters  Bigfloat_read_file.txt  Bigfloat_write_file.txt  CMakeLists.txt  Data_Comparison_Falendysh.h  Data_Comparison_Falendysh_test.c  DyrdaEvhenProject  Enum_functions.c  Enum_header.h  Enum_main.c  Enum_text_file.txt  ExponentialDistribution.cpp  ExponentialDistribution.h  FisherDistribution.cpp  FisherDistribution.h  GeomND.c  Interval.cpp  Interval.h  Interval_test.txt  Karamushka_ Nabok0.c  Karamushka_ Nabok0.h  LICENSE  Lines2D.c  Lines2D.h  Lines2D_test.c  Makefile  NormalDistribution.cpp  NormalDistribution.h  PoissonDistribution.h  Porkhun_v5.c  Porkhun_v5.cuh  README.md  SPoly_Harbuz.c  SPoly_Harbuz.h  SPoly_Harbuz_file.txt  (+41 more)
BigFloat_Zaverukha/: main.c
BigNumber/: BigNumber.c  BigNumber.depend  BigNumber.h  BigNumber_test.c  Bignumber.cbp  f5.txt
DVector(DMatrix)_Kostiukovych/: CMakeLists.txt  Dmatrix_tests.c
Environment Variables Voitsehivska/: readme.txt
Environment Variables Voitsehivska/EnvironmentVariables_CandCPP/: CMakeLists.txt  EnvVar_C.c  EnvVar_C.h  EnvVar_cross_test.cpp  EnvVar_test_C.c  EnvVar_test_CPP.cpp  task2.txt
Interpolation_Tyshchenko/: cppproject  cproject  cross  cross_test_interpolarion.cpp  cross_test_interpolation.cpp
Perestanov/: Check.sln
Random2D_Muzychina/: Random2D_Muzychina_cross_test.cpp
RegularExpressionsTabala/: build.bat  text.txt  Реферат про Регулярні вирази.docx
RegularExpressions_SmakulaVladuslav/: RegularExpressions.docx
Server/: README.md  Проєкт №26
Smatrix/: Smatrix.cpp  Smatrix.h  Smatrix.txt  Smatrix_test.cpp
Task1_Hordienko/: Approx.cpp  Task1.cpp  Task1.h  main.cpp
TrigPoly_Pryhodiuk/: 1.txt  TrigPoly_Pryhodiuk.cbp  TrigPoly_Pryhodiuk.depend  TrigPoly_Pryhodiuk.layout  test1_outputTextFile.txt
baev_hist/: baev_hist.cbp  baev_hist.depend  file.txt  hist.c  hist.h  main.c
headers/: 11Kovalenko.h  Angle3D.h  BigNumbers.h  DMatrix.h  DPoly.h  DVector.h  Edge3D.h  Figure3D.h  Permutations.h  Point3D.h  Progections3D.h  Quaternion.h  SPoly.h  basegeom.h  common.h  figure3d.h  line.h  (+15 more)
(+291 files in other folders)
